--- a/docker/php/81/Dockerfile
+++ b/docker/php/81/Dockerfile
@@ -1,8 +1,8 @@
-FROM juitde/php:8.1.0RC1
+FROM php:8.1.0RC1-cli
 WORKDIR /usr/src/myapp
 CMD [ "vendor/bin/phpunit" ]
 #CMD [ "vendor/bin/wait-for-it.sh", "db:3306", "--", "vendor/bin/phpunit" ]
 #CMD [ "ls", "-alF" ]
 #CMD ["pwd"]
 
-#RUN docker-php-ext-install pdo_mysql
+RUN pecl install xdebug-3.1.0beta2
